--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2008-02-22  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-db.c (db_function_getcategory):
+	Silence "key not found" warnings.
+
+	* src/gva-db.c (gva_db_is_older_than):
+	New function compares a file was updated more recently than the
+	games database.
+
+	* src/gva-audit.c (gva_audit_detect_changes):
+	Call gva_db_is_older_than() for each directory.
+
 2008-02-04  Matthew Barnes  <mbarnes@redhat.com>
 
 	* src/main.c (warn_if_no_roms), (start):
