--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-02-23  Matthew Barnes  <mbarnes@redhat.com>
+
+	* help/C/gnome-video-arcade.xml:
+	Reword some parts.
+
+	* src/gva-game-store.h (GvaGameStoreColumn):
+	Document the enumeration values.
+
 2008-02-22  Matthew Barnes  <mbarnes@redhat.com>
 
 	* src/gva-db.c (db_function_getcategory):
