--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ GNOME Video Arcade 0.5.6
         What's New
         ----------
         * User preference to hide cloned games.
+	* Add a Troubleshooting section to the user documentation.
+	* Present a helpful dialog on startup if no ROMs are present.
         * Handle the absence of category and history files more gracefully.
         * Handle Windows INI-style comments in category files.
 
