--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-29  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-util.c (inpname_exists):
+	Check for files with and without the ".inp" extension.
+	xmame uses the extension, recent versions of sdlmame do not.
+
 2008-02-25  Matthew Barnes  <mbarnes@redhat.com>
 
 	* help/C/gnome-video-arcade.xml:
