--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 GNOME Video Arcade 0.5.6
 ========================
 
-        Released February ??, 2008
+        Released March 1, 2008
 
         What's New
         ----------
@@ -10,6 +10,8 @@ GNOME Video Arcade 0.5.6
 	* Present a helpful dialog on startup if no ROMs are present.
         * Handle the absence of category and history files more gracefully.
         * Handle Windows INI-style comments in category files.
+        * Fix a SDLMAME-specific bug that caused previously recorded games
+          to be overwritten when saving a new recording of the same game.
 
 GNOME Video Arcade 0.5.5
 ========================
