--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+GNOME Video Arcade 0.5.7
+========================
+
+        Released April ??, 2008
+
+        What's New
+        ----------
+        * Do not show BIOS ROM sets in the game list (requires MAME v0.118
+          or later to work).
+
 GNOME Video Arcade 0.5.6
 ========================
 
