--- a/README
+++ b/README
@@ -27,6 +27,12 @@ installed prior to compiling the source code:
           sdlmame:  http://rbelmont.mameworld.info/?page_id=163
           xmame:    http://x.mame.net/
 
+   - gnome-doc-utils
+
+       GNOME Video Arcade uses gnome-doc-utils to build the user
+       documentation.  This should be available from your GNU/Linux
+       distribution as a pre-compiled package.
+
    - Header files for GTK+ version 2.10 (or higher).
 
        The GTK+ header files should be available from your GNU/Linux
